# clap-version-flag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  QUICK_START.md  README.md  RELEASE_NOTES_v1.0.5.md  tmp99lb6u
.github/workflows/: ci.yml
examples/: basic.rs  custom_colors.rs  derive_helper.rs  full_integration.rs
src/: error.rs  lib.rs  macros.rs
tests/: color_test.rs  integration.rs  macros_test.rs
