[package]
name = "clap-version-flag"
version = "1.0.4"
edition = "2024"
authors = [
    "Hadi Cahyadi <cumulus13@gmail.com>",
]
description = "colorful version handler for clap"
repository = "https://github.com/cumulus13/clap-version-flag"
homepage = "https://github.com/cumulus13/clap-version-flag"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "clap",
    "version",
    "color",
    "cli",
]
categories = [
    "command-line-interface",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[features]
default = []
no-color = [
    "colored/no-color",
]
derive = [
    "clap/derive",
]

[dependencies]
thiserror = "1.0"

[dependencies.clap]
version = "=4.5.53"
features = [
    "cargo",
]

[dependencies.colored]
version = "2.1"
default-features = false

[dev-dependencies]
trycmd = "0.14"
assert_cmd = "2.0"
predicates = "3.0"

[dev-dependencies.clap]
version = "=4.5.53"
features = [
    "derive",
]
